--- a/java-all-call-graph/src/main/resources/_jacg_config/config_db.properties
+++ b/java-all-call-graph/src/main/resources/_jacg_config/config_db.properties
@@ -7,7 +7,7 @@ db.h2.file.path=./build/jacg_h2db
 # 数据库配置（仅当使用非H2数据库时需要指定）
 db.driver.name=com.mysql.cj.jdbc.Driver
 # 使用MySQL时，url需要指定rewriteBatchedStatements=true，开启批量插入，提高效率，默认未开启
-# db.url=jdbc:mysql://1.1.1.1:3306/test_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
+# db.url=jdbc:mysql://x.x.x.x:3306/database?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
 # db.username=test_username
 # db.password=test_password
 db.url=
